# etf_selection

./: .env.example  .gitignore  GUIDE_OVERVIEW.md  GUIDE_ROOT.md  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml
content/: GUIDE_content.md
content/post/: GUIDE_post.md
data/: GUIDE_data.md
data/raw/: volume_screen.csv
docs/: GUIDE_docs.md
docs/reference/: clickhouse_database_notes.md  methods_math_quick_guide.md
notebooks/: GUIDE_notebooks.md
notebooks/01_project_walkthrough/: data_pipeline_test.ipynb  etf_inception_analysis.ipynb  explore_allocation_methods.ipynb  explore_buy_and_hold.ipynb  explore_selection_methods.ipynb
outputs/: GUIDE_outputs.md
outputs/backtesting/: GUIDE_outputs.md  buy_and_hold_allocation_20260301_063653.csv  buy_and_hold_allocation_20260310_014834.csv  buy_and_hold_equity_curve_20260301_055753.csv  buy_and_hold_equity_curve_20260301_063653.csv  buy_and_hold_metrics_20260301_063653.csv  buy_and_hold_metrics_20260310_001955.csv  ticker_yearly_metrics_20260315_notebook20.csv  ticker_yearly_sharpe_20260315_notebook20.csv  ticker_yearly_total_return_20260315_notebook20.csv
outputs/correlation_analysis/: GUIDE_outputs.md  pca_loadings.csv  selected_greedy.csv  selected_kmedoids.csv  selected_maxdiv.csv  selected_merged.csv  selected_pca.csv  selected_ward.csv
outputs/etf_return_vol_screen/: GUIDE_outputs.md  etf_return_vol_screen_2026-06-17_001.csv  etf_return_vol_screen_2026-06-17_002.csv  (+5 more)
scripts/: GUIDE_scripts.md  scan_etfs_return_vol.py
src/: __init__.py  notebook_support.py
tests/: GUIDE_tests.md
(+70 files in other folders)
