[project]
name = "etf-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect>=0.13.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
